--- a/admissionfrontend/src/app/adminview/adminview.component.css
+++ b/admissionfrontend/src/app/adminview/adminview.component.css
@@ -36,6 +36,13 @@ div {
     background-position: 25% 50%;
 }
 
+.logo2 {
+    background-image: url("/assets/logo.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 50% 45%;
+}
+
 .cardshow{
     cursor: pointer;
     background-color: #fff;
