--- a/admissionfrontend/src/app/editdetails/editdetails.component.html
+++ b/admissionfrontend/src/app/editdetails/editdetails.component.html
@@ -216,7 +216,7 @@
             </div><br />
             <div style="display: flex;">
                 <button type="submit" class="btn btn-success">SUBMIT</button>&nbsp;
-                <button type="button" class="btn btn-danger">CLOSE</button>
+                <button type="button"  routerLink="/admin" class="btn btn-danger">CLOSE</button>
             </div>
         </div>
         <br />
